Try everything code style on editor event ('change')

--- a/ception/articles/templates/articles/tests/summary_view.html
+++ b/ception/articles/templates/articles/tests/summary_view.html
@@ -115,7 +115,7 @@
             'sen_B': selected_sentence[1],
             'sen_id': $("#sentence_id").val(),
             'ver_id': -2,
-            'origin': sentence_array[0],
+            'origin': sentence_array[0]
           },
           cache: false,
           type: 'post',
