--- a/ception/articles/templates/articles/merge-modal.html
+++ b/ception/articles/templates/articles/merge-modal.html
@@ -7,7 +7,7 @@
         </button>
         <h4 class="modal-title" id="myModalLabel">Solve Conflict</h4>
       </div>
-      <div class="modal-body modal-sentence hide-del-class">
+      <div class="modal-body modal-sentence hide-del-class context-menu-activated">
         This is a
         <div class="replace" data-pk="0">
           <del>example</del>
