--- a/ception/articles/static/css/edit.css
+++ b/ception/articles/static/css/edit.css
@@ -126,11 +126,12 @@
 .sentence-vote {
     display: inline;
     /*font-size: 16px;*/
+    cursor: pointer;
     color: #bbb;
 }
 
-.sentence-vote:hover {
-    cursor: pointer;
+.sentence-vote:hover,
+.sentence-vote.hovered {
     color: #428bca;
 }
 
@@ -139,11 +140,12 @@
 }
 
 .accept-button {
+    cursor: pointer;
     color: #bbb;
 }
 
-.accept-button:hover {
-    cursor: pointer;
+.accept-button:hover,
+.accept-button.hovered {
     color: #428bca;
 }
 
@@ -209,20 +211,19 @@
 }
 
 .sentence-list-header {
-    height: 54px;
+    /*height: 54px;*/
 }
 
 .sentence-list-header .toggle {
-    margin: 10px 15px 10px 0px;
     float: right;
-    display: inline-block;
-    height: 50px;
+    margin-right: 20px;
+    margin-top: 8px;
 }
 
 .sentence-list-header .header-text {
-    line-height: 54px;
-    font-family: Chalkboard;
-    font-size: 20px;
+    /*line-height: 54px;*/
+    /*font-family: Chalkboard;*/
+    /*font-size: 20px;*/
     display: inline-block;
     margin-left: 15px;
 }
@@ -251,6 +252,19 @@
 .sentence-list-footer .footer-text {
     line-height: 30px;
     margin-left: 15px;
-    font-family: Chalkboard;
-    font-size: 14px;
+    /*font-family: Chalkboard;*/
+    /*font-size: 14px;*/
+}
+
+#current_sentence:before {
+    content: '[';
+    color: red;
+    position: absolute;
+    margin-left: -3px;
+}
+#current_sentence:after{
+    content: ']';
+    color: red;
+    position: absolute;
+    margin-left: -1px;
 }
