--- a/ception/articles/templates/articles/edit.html
+++ b/ception/articles/templates/articles/edit.html
@@ -109,7 +109,7 @@
           {% include 'articles/partial/partial_sentence.html' with author=author %}
         {% endfor %}
         <div class="sentence-list-footer">
-          <div class="sentence-content footer-text">
+          <div class="footer-text">
             Legend:
             1. <ins>Inserted</ins>
             2. <del>Deleted</del>
