--- a/ception/templates/base.html
+++ b/ception/templates/base.html
@@ -7,12 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title %}CEPT{% endblock %}</title>
     <link rel="icon" type="image/png" href="{% static 'img/favicon.png' %}">
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
-    {#    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">#}
+    {# <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet"> #}
+    <link href="http://cdn.bootcss.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+    {# <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet"> #}
     <link href="{% static 'css/bootcamp.css' %}?v=1" rel="stylesheet">
     <script src="{% static 'js/jquery.min.js' %}"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    {#    <script src="{% static 'js/bootstrap.min.js' %}"></script>#}
+    {# <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script> #}
+    <script src="http://cdn.bootcss.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    {# <script src="{% static 'js/bootstrap.min.js' %}"></script> #}
     <script src="{% static 'js/bootcamp.js' %}"></script>
     <script src="{% static 'ckeditor/ckeditor.js' %}"></script>
     <script src="{% static 'ckeditor/useful.js' %}"></script>
