Remove tooltip and check if summary view is needed

--- a/ception/articles/static/css/edit.css
+++ b/ception/articles/static/css/edit.css
@@ -267,3 +267,7 @@ ins {
     position: absolute;
     margin-left: -1px;
 }
+
+.summary-block .comment-text h5 {
+    background-color: #ffe7f7;
+}
