--- a/ception/articles/templates/articles/partial/partial_summary.html
+++ b/ception/articles/templates/articles/partial/partial_summary.html
@@ -6,8 +6,8 @@
     <div class="comment-text">
       <h5>
         <a>Summary</a>
-        <small class="time">edits by others</small>
-        <div style="display: inline-block; float: right; margin-right: 10px;">
+        <span class="label label-success">others</span>
+        <div id="summary-merge-button" style="display: inline-block; float: right; margin-right: 10px;">
           <span type="button" class="glyphicon glyphicon-ok accept-button"></span>
         </div>
       </h5>
@@ -15,4 +15,3 @@
     </div>
   </div>
 </div>
-
