--- a/ception/articles/static/css/edit.css
+++ b/ception/articles/static/css/edit.css
@@ -187,7 +187,22 @@ ins {
     display: inline;
     position: relative;
     /*background: #FFFF88;*/
-    border-bottom: 2px solid #5EB7E1;
+    border-bottom: 1px solid #000;
+}
+#sentence-list .replace.lv1{
+    border-bottom-color: rgb(180,230,253);
+}
+#sentence-list .replace.lv2{
+    border-bottom-color: rgb(149,219,252);
+}
+#sentence-list .replace.lv3{
+    border-bottom-color: rgb(119,209,251);
+}
+#sentence-list .replace.lv4{
+    border-bottom-color: rgb(88,198,250);
+}
+#sentence-list .replace.lv5{
+    border-bottom-color: rgb(57,187,249);
 }
 
 /*.replace:before {
