--- a/ception/articles/templates/articles/edit.html
+++ b/ception/articles/templates/articles/edit.html
@@ -126,6 +126,9 @@
             </div>
           </div>
         </div>-->
+        <div class="panel-heading text-center">
+          <i>Hided <span class="omitted-number">?</span> unchanged version</i>
+        </div>
         <div class="sentence-list-footer">
           <div class="footer-text">
             <span class="glyphicon glyphicon-info-sign" style="color: #EE693E; vertical-align: text-top;"></span>
