--- a/ception/articles/templates/articles/partial/partial_summary.html
+++ b/ception/articles/templates/articles/partial/partial_summary.html
@@ -6,7 +6,7 @@
     <div class="comment-text">
       <h5>
         <a>Summary</a>
-        <span class="label label-success">others</span>
+        <span class="label label-success" id="summary-span">others</span>
         <div id="summary-merge-button" style="display: inline-block; float: right; margin-right: 10px;">
           <span type="button" class="glyphicon glyphicon-ok accept-button"></span>
         </div>
