--- a/ception/articles/templates/articles/partial/partial_article.html
+++ b/ception/articles/templates/articles/partial/partial_article.html
@@ -26,10 +26,10 @@
     <div class="col-md-3" style="margin-top: 10px">
       <div class="btn-group btn-group-justified" role="group" aria-label="...">
         <div class="btn-group" role="group">
-          <a href="{% url 'edit_compare' article.id %}" type="button" class="btn btn-default">UI #1</a>
+          <a href="{% url 'edit_compare' article.id %}" type="button" class="btn btn-default">UI #1 (Baseline)</a>
         </div>
         <div class="btn-group" role="group">
-          <a href="{% url 'edit' article.id %}" type="button" class="btn btn-default">UI #2</a>
+          <a href="{% url 'edit' article.id %}" type="button" class="btn btn-default">UI #2 (CEPT)</a>
         </div>
       </div>
     </div>
