hotfix for experiment in div branch to solve comment and vote bugs

--- a/ception/articles/templates/articles/partial/partial_sentence.html
+++ b/ception/articles/templates/articles/partial/partial_sentence.html
@@ -10,7 +10,7 @@
         <span class="label label-info">&nbsp;mine&nbsp;</span>
       {% endif %}
         <small class="time">editing now</small>
-        <div style="display: inline-block; padding-right: 20px;">
+        <div class="comment-tool-div" style="display: inline-block; padding-right: 20px;">
           <span class="glyphicon glyphicon-comment sentence-comment-button sentence-vote"></span>
           <span class="comment-count">-</span>
         </div>
