--- a/ception/articles/templates/articles/edit.html
+++ b/ception/articles/templates/articles/edit.html
@@ -87,12 +87,12 @@
         <div class="col-md-3"></div>
         <div class="col-md-3">
           <a class="btn btn-default btn-block" id="cancel-button"
-             href="{% url 'articles' %}">{% trans 'Cancel' %}
+             href="{% url 'articles' %}">{% trans 'Back' %}
           </a>
 
         </div>
         <div class="col-md-3">
-          <button class="btn btn-primary btn-block" id="commit-button">{% trans 'Commit' %}</button>
+          <button class="btn btn-primary btn-block" id="commit-button">{% trans 'Save' %}</button>
         </div>
       </div>
       <div id="sentence-list" hidden="hidden">
