--- a/ception/articles/templates/articles/edit.html
+++ b/ception/articles/templates/articles/edit.html
@@ -126,7 +126,7 @@
             </div>
           </div>
         </div>-->
-        <div class="panel-heading text-center">
+        <div id="hided-number-panel" class="panel-heading text-center">
           <i>Hided <span class="omitted-number">?</span> unchanged version</i>
         </div>
         <div class="sentence-list-footer">
