--- a/ception/articles/templates/articles/partial/partial_summary.html
+++ b/ception/articles/templates/articles/partial/partial_summary.html
@@ -14,4 +14,7 @@
       <div class="sentence-content hide-del-class summary-content context-menu-activated"></div>
     </div>
   </div>
+  <!--<div class="panel-heading">
+    <i>Version details:</i>
+  </div>-->
 </div>
