Change origin to number & imporove UI for study

--- a/ception/articles/templates/articles/edit_compare.html
+++ b/ception/articles/templates/articles/edit_compare.html
@@ -73,11 +73,11 @@
         <div class="col-md-3"></div>
         <div class="col-md-3">
           <a class="btn btn-default btn-block" id="cancel-button" style="margin-top: 10px;"
-             href="{% url 'articles' %}">{% trans 'Cancel' %}</a>
+             href="{% url 'articles' %}">{% trans 'Exit' %}</a>
         </div>
         <div class="col-md-3">
           <button class="btn btn-primary btn-block" id="commit-button"
-                  style="margin-top: 10px;">{% trans 'Commit' %}</button>
+                  style="margin-top: 10px;">{% trans 'Save' %}</button>
         </div>
       </div>
       <div>
