--- a/ception/articles/templates/articles/edit.html
+++ b/ception/articles/templates/articles/edit.html
@@ -87,7 +87,7 @@
         <div class="col-md-3"></div>
         <div class="col-md-3">
           <a class="btn btn-default btn-block" id="cancel-button"
-             href="{% url 'articles' %}">{% trans 'Back' %}
+             href="{% url 'articles' %}">{% trans 'Exit' %}
           </a>
 
         </div>
