--- a/ception/auth/templates/auth/signup.html
+++ b/ception/auth/templates/auth/signup.html
@@ -8,8 +8,9 @@
 
 {% block body %}
   <h1 class="logo"><a href="{% url 'home' %}">Cept</a></h1>
+  <h1 class="logo" style="margin-top: -30px"><a href="{% url 'home' %}"><i class="h4">(<b>C</b>ollaborative <b>E</b>diting &amp; <b>P</b>olising <b>T</b>ool)</i></a></h1>
   <div class="signup">
-    <h2>{% trans 'Sign up for Cept' %}</h2>
+    <h2>{% trans 'Sign up' %}</h2>
     <form action="{% url 'signup' %}" method="post" role="form">
       {% csrf_token %}
       {% for field in form.visible_fields %}
