--- a/ception/auth/static/css/signup.css
+++ b/ception/auth/static/css/signup.css
@@ -2,6 +2,14 @@ body {
   background-color: #006389;
 }
 
+.cover {
+  width: 500px;
+  height: 400px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: -50px;
+}
+
 .logo {
   margin: 0;
   font-size: 3em;
@@ -23,19 +31,14 @@ body {
 
 .signup {
   background-color: #f6f6f6;
-  width: 70%;
+  width: 100%;
   border-radius: 7px;
-  margin: 10px auto 0;
-}
-
-.signup {
-  padding: 30px 20px;
+  margin-top: 10px;
+  margin-bottom: 20px;
+  padding: 10px 20px;
 }
 
 .signup form {
   margin-top: 20px;
 }
 
-.signup h2 {
-  margin: 0;
-}
