--- a/ception/core/static/css/cover.css
+++ b/ception/core/static/css/cover.css
@@ -1,15 +1,13 @@
 body {
-  background-color: #efefef;
+  background-color: #006389;
 }
 
 .cover {
   width: 400px;
   height: 400px;
-  position: fixed;
-  margin-left: -200px;
-  margin-top: -200px;
-  top: 50%;
-  left: 50%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: -50px;
 }
 
 .logo {
@@ -17,23 +15,30 @@ body {
   font-size: 3em;
   font-weight: 200;
   font-family: "Audiowide", cursive;
-  color: #92c35e;
   text-align: center;
   text-shadow: 1px 1px 0 #333333;
   line-height: 70px;
 }
 
-.login {
-  background-color: #f6f6f6;
-  width: 100%;
-  height: 330px;
-  border-radius: 7px;
+.logo a {
+  color: #92c35e;
+}
+
+.logo a:hover, .logo a:focus {
+  color: #92c35e;
+  text-decoration: none;
 }
 
 .login {
+  background-color: #f6f6f6;
+  width: 100%;
+  border-radius: 7px;
   padding: 10px 20px;
+  margin-top: 10px;
+  margin-bottom: 20px;
 }
 
 .login form {
   margin-top: 20px;
 }
+
