--- a/ception/core/templates/core/cover.html
+++ b/ception/core/templates/core/cover.html
@@ -9,7 +9,8 @@
 {% block body %}
   <!-- <a href="https://github.com/vitorfs/bootcamp"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/e7bbb0521b397edbd5fe43e7f760759336b5e05f/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677265656e5f3030373230302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png"></a> -->
   <div class="cover">
-    <h1 class="logo">CEPT</h1>
+    <h1 class="logo"><a href="{% url 'home' %}">Cept</a></h1>
+    <h1 class="logo" style="margin-top: -30px"><a href="{% url 'home' %}"><i class="h4">(<b>C</b>ollaborative <b>E</b>diting &amp; <b>P</b>olising <b>T</b>ool)</i></a></h1>
     {% if form.non_field_errors %}
       {% for error in form.non_field_errors %}
         <div class="alert alert-danger alert-dismissable">
@@ -24,23 +25,29 @@
         {% csrf_token %}
         <div class="form-group{% if form.username.errors %} has-error{% endif %}">
           <label for="username">{% trans 'Username' %}</label>
-          <input type="text" class="form-control" id="username" name="username">
+          <input type="text" class="form-control" id="username" name="username" value="guest">
           {% for error in form.username.errors %}
             <label class="control-label">{{ error }}</label>
           {% endfor %}
         </div>
         <div class="form-group{% if form.password.errors %} has-error{% endif %}">
           <label for="password">{% trans 'Password' %}</label>
-          <input type="password" class="form-control" id="password" name="password">
+          <input type="password" class="form-control" id="password" name="password" value="a">
           {% for error in form.password.errors %}
             <label class="control-label">{{ error }}</label>
           {% endfor %}
         </div>
-        <div class="form-group">
-          <button type="submit" class="btn btn-default">{% trans 'Log in' %}</button>
-          <a href="{% url 'signup' %}" class="btn btn-link">{% trans 'Sign up for CEPT' %}</a>
+        <div class="form-group" style="margin-top: 25px;">
+          <button type="submit" class="btn btn-default"><b>{% trans 'Try CEPT!' %}</b></button>
+          <a href="{% url 'signup' %}" class="btn btn-link">{% trans 'Sign up' %} <i>(Expert user)</i></a>
         </div>
       </form>
+    </div>
+    <!-- Borrowed from http://ivolver.cs.st-andrews.ac.uk/ -->
+    <div class="alert alert-info text-justify">
+      <h4>Disclaimer:</h4>
+      <p>CEPT is a research prototype. It has been tested on the latest version of <b>Safari</b> and <b>Google Chrome</b> and it requires JavaScript to run properly. Some functionalities might not work on other browsers. Try it!</p>
+      <!--specially when using ... In particular, when running in Firefox, the ... is not supported.-->
     </div>
   </div>
 {% endblock body %}
